# autompw

./: .gitattributes  .gitignore  MPW_2512.gds  README.md  dummy_script_ODPO  fill_ODPO  fill_metal  plan.md  pyproject.toml
autompw/: __init__.py  assemble.py  calibre.py  cli.py  config.py  dummy.py  framework.py  gds_io.py  geometry.py  planner.py  preview.py  report.py  templates.py
deck/: dummy_script_ODPO  dummy_script_metal
doc/: gdsfactory_basic_usage.md  plan.md  process_template_guide.md  test_plan.md
examples/: mpw_2512.yaml
templates/tsmc180/: mpw_config.yaml
templates/tsmc180/deck/: dmfill_metal  dmfill_odpo
templates/tsmc28/: mpw_config.yaml
templates/tsmc28/deck/: dmfill_metal
tests/: test_calibre.py  test_cli.py  test_config.py  test_gds_flow.py  test_geometry.py  test_planner.py  test_preview.py  test_report.py  test_templates.py
