[project]
name = "autompw"
version = "0.1.0"
description = "CLI tools for MPW GDS assembly and dummy fill orchestration"
requires-python = ">=3.11"
dependencies = [
  "typer",
  "pyyaml",
  "klayout",
]

[project.scripts]
autompw = "autompw.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
