[project]
name = "autompw"
version = "0.1.0"
description = "CLI tools for MPW GDS assembly and dummy fill orchestration"
requires-python = ">=3.11"
dependencies = [
  "typer",
  "pyyaml",
  "klayout",
]

[project.scripts]
autompw = "autompw.cli:app"

[tool.setuptools]
packages = ["autompw"]

[tool.setuptools.data-files]
"templates/tsmc28" = ["templates/tsmc28/mpw_config.yaml"]
"templates/tsmc28/deck" = [
  "templates/tsmc28/deck/dmfill_metal",
  "templates/tsmc28/deck/dmfill_odpo",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
